

[package]
name = "json_read"
version = "0.1.0"
edition = "2021"

authors = ["Your Name <you@example.com>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.66"
piston = "0.36.0"
piston2d-graphics = "0.26.0"
pistoncore-glutin_window = "0.45.0"
piston2d-opengl_graphics = "0.52.0"
rand = "0.4"
# piston_window = "*"
find_folder = "*"

piston_window = "0.127.0"
gfx = "0.18.2"
text = "0.0.4"
gfx_device_gl = "0.16.2"
#graphics = "0.37.0"
 

